feat: update GitHub Actions workflow for deployment, switch to pnpm, and improve Node.js version handling
chore: add CLAUDE.md to .gitignore

refactor: remove CMD instruction from Dockerfile

fix: use environment variable for CESIUM_ION_TOKEN in config

cleanup: remove commented routes in routes.ts

fix: update package.json to ensure all-contributors-cli is included

refactor: improve Cesium global variable handling in app.tsx

feat: add TODO for logout functionality in RightContent

fix: update Chinese locale for HaiAirPosture

refactor: remove console logs from AudioPlayer

refactor: update D3 imports to use named imports

fix: remove console logs from Frequency component

fix: remove console logs from FullCalendar component

refactor: remove console logs from GeoHash component

refactor: dynamically load thermal map data in HaiAirPosture

fix: update ThermalMap to handle loading state and improve error handling

fix: remove console logs from Trajectory component

fix: remove console logs from Unit component

fix: remove console logs from InfoMap component

fix: remove console logs from RichTextEditing component

refactor: remove console logs from cesiumCompute utility

fix: remove console logs from requestConfig error handling

chore: add .env.example for environment variable setup

chore: add typings for global variables in typings.d.ts

chore: add vercel.json for Vercel deployment configuration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,38 @@
-name: Deploy to GitHub Pages # 自定义工作流名称
+name: Deploy to GitHub Pages
 
-on: # 触发条件
-  push: # 当推送时触发
-    branches: # 推送到哪些分支时触发
-      - master  # 当推送到 master 分支时，触发 deploy 构建
-  pull_request: # 当 PR 时触发
-    branches: # PR 到哪些分支时触发
-      - master # 当 PR 到 master 分支时，触发 deploy 构建
-  workflow_dispatch: # 手动触发
-    branches: # 手动触发时，触发 deploy 构建
-      - master # 手动触发时，触发 deploy 构建
+on:
+  push:
+    branches:
+      - master
 
-jobs: # 一个工作流可以包含多个 job
-  build-and-deploy: # 自定义 job 名称
-    runs-on: ubuntu-latest # 运行环境
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-    steps: # job 包含的步骤
-      - name: Checkout code # 步骤名称
-        uses: actions/checkout@v4 # 使用的 action
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js # 安装 Node.js
-        uses: actions/setup-node@v4 # 使用的 action
-        with: # action 参数
-          node-version: '20' # 设置 Node.js 版本
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
 
-      - name: Install pnpm # 安装依赖
-        run: npm install -g pnpm # 执行命令
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
-      - name: Install dependencies # 安装依赖
-        run: pnpm install # 执行命令
+      - name: Install dependencies
+        run: pnpm install
 
-      - name: Build project # 构建项目
-        run: pnpm build:github # 执行命令
+      - name: Build
+        env:
+          CESIUM_ION_TOKEN: ${{ secrets.CESIUM_ION_TOKEN }}
+        run: pnpm run build:github
 
-      - name: Deploy to GitHub Pages # 部署到 GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.4 # 使用的 action
-        with: # action 参数
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub Token
-          BRANCH: gh-pages # 部署到的分支
-          FOLDER: dist # 部署的文件夹
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
