--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "pnpm run build",
   "outputDirectory": "dist",
-  "framework": "umi",
+  "framework": "umijs",
   "installCommand": "pnpm install",
   "github": {
     "silent": true
